# dydx

./: .gitignore  LICENSE  README.md  fit.ipynb  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
dydx/: dataset.py  download.py  dydx.py  layers.py  linear_algebra.py  metrics.py  model.py  testing.py
examples/: insurance_claims.py  singular_value_decomposition.py  xor_gate.py
src/dydx/: autodiff.py  dataset.py  dev.py  download.py  layers.py  linear_algebra.py  metrics.py  model.py  utils.py
tests/: test_autodiff.py  test_dataset.py  test_linear_algebra.py
